PR Changes 07.04.2025, Added new Request and Response Definitions, Added GetAllListsHandler PRAK25-19
