# internal/types/books/create_book_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package books
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -17,46 +17,46 @@ import (
 	"test-project/internal/types"
 )
 
-// NewCreateListParams creates a new CreateListParams object
+// NewCreateBookParams creates a new CreateBookParams object
 // no default values defined in spec.
-func NewCreateListParams() CreateListParams {
+func NewCreateBookParams() CreateBookParams {
 
-	return CreateListParams{}
+	return CreateBookParams{}
 }
 
-// CreateListParams contains all the bound params for the create list operation
+// CreateBookParams contains all the bound params for the create book operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters createList
-type CreateListParams struct {
+// swagger:parameters createBook
+type CreateBookParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*Creates a new book list with a name.
+	/*book to create
 	  Required: true
 	  In: body
 	*/
-	NewList *types.List
+	Body *types.CreateBookRequest
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewCreateListParams() beforehand.
-func (o *CreateListParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewCreateBookParams() beforehand.
+func (o *CreateBookParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body types.List
+		var body types.CreateBookRequest
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
-				res = append(res, errors.Required("newList", "body", ""))
+				res = append(res, errors.Required("body", "body", ""))
 			} else {
-				res = append(res, errors.NewParseError("newList", "body", "", err))
+				res = append(res, errors.NewParseError("body", "body", "", err))
 			}
 		} else {
 			// validate body object
@@ -65,11 +65,11 @@ func (o *CreateListParams) BindRequest(r *http.Request, route *middleware.Matche
 			}
 
 			if len(res) == 0 {
-				o.NewList = &body
+				o.Body = &body
 			}
 		}
 	} else {
-		res = append(res, errors.Required("newList", "body", ""))
+		res = append(res, errors.Required("body", "body", ""))
 	}
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
@@ -77,14 +77,14 @@ func (o *CreateListParams) BindRequest(r *http.Request, route *middleware.Matche
 	return nil
 }
 
-func (o *CreateListParams) Validate(formats strfmt.Registry) error {
+func (o *CreateBookParams) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	// newList
+	// body
 	// Required: true
 
 	// body is validated in endpoint
-	//if err := o.NewList.Validate(formats); err != nil {
+	//if err := o.Body.Validate(formats); err != nil {
 	//  res = append(res, err)
 	//}
 
