# internal/types/books/get_book_details_parameters.go
@@ -1,56 +1,47 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package books
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
-	"io"
 	"net/http"
 
 	"github.com/go-openapi/errors"
-	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/validate"
-
-	"test-project/internal/types"
 )
 
-// NewAddBookRatingParams creates a new AddBookRatingParams object
+// NewGetBookDetailsParams creates a new GetBookDetailsParams object
 // no default values defined in spec.
-func NewAddBookRatingParams() AddBookRatingParams {
+func NewGetBookDetailsParams() GetBookDetailsParams {
 
-	return AddBookRatingParams{}
+	return GetBookDetailsParams{}
 }
 
-// AddBookRatingParams contains all the bound params for the add book rating operation
+// GetBookDetailsParams contains all the bound params for the get book details operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters addBookRating
-type AddBookRatingParams struct {
+// swagger:parameters getBookDetails
+type GetBookDetailsParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*Id of book to rate.
+	/*Id of book to return.
 	  Required: true
 	  In: path
 	*/
 	BookID strfmt.UUID `param:"book_id"`
-	/*Book with rating/notes.
-	  Required: true
-	  In: body
-	*/
-	NewBook *types.BookInMyDb
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewAddBookRatingParams() beforehand.
-func (o *AddBookRatingParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewGetBookDetailsParams() beforehand.
+func (o *GetBookDetailsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
@@ -60,35 +51,13 @@ func (o *AddBookRatingParams) BindRequest(r *http.Request, route *middleware.Mat
 		res = append(res, err)
 	}
 
-	if runtime.HasBody(r) {
-		defer r.Body.Close()
-		var body types.BookInMyDb
-		if err := route.Consumer.Consume(r.Body, &body); err != nil {
-			if err == io.EOF {
-				res = append(res, errors.Required("newBook", "body", ""))
-			} else {
-				res = append(res, errors.NewParseError("newBook", "body", "", err))
-			}
-		} else {
-			// validate body object
-			if err := body.Validate(route.Formats); err != nil {
-				res = append(res, err)
-			}
-
-			if len(res) == 0 {
-				o.NewBook = &body
-			}
-		}
-	} else {
-		res = append(res, errors.Required("newBook", "body", ""))
-	}
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (o *AddBookRatingParams) Validate(formats strfmt.Registry) error {
+func (o *GetBookDetailsParams) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	// book_id
@@ -99,14 +68,6 @@ func (o *AddBookRatingParams) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
-	// newBook
-	// Required: true
-
-	// body is validated in endpoint
-	//if err := o.NewBook.Validate(formats); err != nil {
-	//  res = append(res, err)
-	//}
-
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
@@ -114,7 +75,7 @@ func (o *AddBookRatingParams) Validate(formats strfmt.Registry) error {
 }
 
 // bindBookID binds and validates parameter BookID from path.
-func (o *AddBookRatingParams) bindBookID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *GetBookDetailsParams) bindBookID(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
@@ -138,7 +99,7 @@ func (o *AddBookRatingParams) bindBookID(rawData []string, hasKey bool, formats 
 }
 
 // validateBookID carries on validations for parameter BookID
-func (o *AddBookRatingParams) validateBookID(formats strfmt.Registry) error {
+func (o *GetBookDetailsParams) validateBookID(formats strfmt.Registry) error {
 
 	if err := validate.FormatOf("book_id", "path", "uuid", o.BookID.String(), formats); err != nil {
 		return err
