# internal/types/google_books/search_google_books_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package google_books
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -16,9 +16,9 @@ import (
 	"github.com/go-openapi/validate"
 )
 
-// NewGetAllBooksFromListParams creates a new GetAllBooksFromListParams object
+// NewSearchGoogleBooksParams creates a new SearchGoogleBooksParams object
 // with the default values initialized.
-func NewGetAllBooksFromListParams() GetAllBooksFromListParams {
+func NewSearchGoogleBooksParams() SearchGoogleBooksParams {
 
 	var (
 		// initialize parameters with default values
@@ -27,27 +27,22 @@ func NewGetAllBooksFromListParams() GetAllBooksFromListParams {
 		pageSizeDefault = int64(10)
 	)
 
-	return GetAllBooksFromListParams{
+	return SearchGoogleBooksParams{
 		Page: &pageDefault,
 
 		PageSize: &pageSizeDefault,
 	}
 }
 
-// GetAllBooksFromListParams contains all the bound params for the get all books from list operation
+// SearchGoogleBooksParams contains all the bound params for the search google books operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters getAllBooksFromList
-type GetAllBooksFromListParams struct {
+// swagger:parameters searchGoogleBooks
+type SearchGoogleBooksParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*List ID from the list we want the books for.
-	  Required: true
-	  In: path
-	*/
-	ListID strfmt.UUID `param:"list_id"`
 	/*Page number
 	  In: query
 	  Default: 1
@@ -59,23 +54,23 @@ type GetAllBooksFromListParams struct {
 	  Default: 10
 	*/
 	PageSize *int64 `query:"pageSize"`
+	/*Search term for searching books. (title, author or publisher)
+	  Required: true
+	  In: query
+	*/
+	Query string `query:"query"`
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewGetAllBooksFromListParams() beforehand.
-func (o *GetAllBooksFromListParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewSearchGoogleBooksParams() beforehand.
+func (o *SearchGoogleBooksParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
 
 	qs := runtime.Values(r.URL.Query())
-
-	rListID, rhkListID, _ := route.Params.GetOK("list_id")
-	if err := o.bindListID(rListID, rhkListID, route.Formats); err != nil {
-		res = append(res, err)
-	}
 
 	qPage, qhkPage, _ := qs.GetOK("page")
 	if err := o.bindPage(qPage, qhkPage, route.Formats); err != nil {
@@ -87,22 +82,19 @@ func (o *GetAllBooksFromListParams) BindRequest(r *http.Request, route *middlewa
 		res = append(res, err)
 	}
 
+	qQuery, qhkQuery, _ := qs.GetOK("query")
+	if err := o.bindQuery(qQuery, qhkQuery, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (o *GetAllBooksFromListParams) Validate(formats strfmt.Registry) error {
+func (o *SearchGoogleBooksParams) Validate(formats strfmt.Registry) error {
 	var res []error
-
-	// list_id
-	// Required: true
-	// Parameter is provided by construction from the route
-
-	if err := o.validateListID(formats); err != nil {
-		res = append(res, err)
-	}
 
 	// page
 	// Required: false
@@ -116,47 +108,21 @@ func (o *GetAllBooksFromListParams) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	// query
+	// Required: true
+	// AllowEmptyValue: false
+	if err := validate.Required("query", "query", o.Query); err != nil {
+		res = append(res, err)
+	}
+
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-// bindListID binds and validates parameter ListID from path.
-func (o *GetAllBooksFromListParams) bindListID(rawData []string, hasKey bool, formats strfmt.Registry) error {
-	var raw string
-	if len(rawData) > 0 {
-		raw = rawData[len(rawData)-1]
-	}
-
-	// Required: true
-	// Parameter is provided by construction from the route
-
-	// Format: uuid
-	value, err := formats.Parse("uuid", raw)
-	if err != nil {
-		return errors.InvalidType("list_id", "path", "strfmt.UUID", raw)
-	}
-	o.ListID = *(value.(*strfmt.UUID))
-
-	if err := o.validateListID(formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// validateListID carries on validations for parameter ListID
-func (o *GetAllBooksFromListParams) validateListID(formats strfmt.Registry) error {
-
-	if err := validate.FormatOf("list_id", "path", "uuid", o.ListID.String(), formats); err != nil {
-		return err
-	}
-	return nil
-}
-
 // bindPage binds and validates parameter Page from query.
-func (o *GetAllBooksFromListParams) bindPage(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *SearchGoogleBooksParams) bindPage(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
@@ -165,7 +131,7 @@ func (o *GetAllBooksFromListParams) bindPage(rawData []string, hasKey bool, form
 	// Required: false
 	// AllowEmptyValue: false
 	if raw == "" { // empty values pass all other validations
-		// Default values have been previously initialized by NewGetAllBooksFromListParams()
+		// Default values have been previously initialized by NewSearchGoogleBooksParams()
 		return nil
 	}
 
@@ -179,7 +145,7 @@ func (o *GetAllBooksFromListParams) bindPage(rawData []string, hasKey bool, form
 }
 
 // bindPageSize binds and validates parameter PageSize from query.
-func (o *GetAllBooksFromListParams) bindPageSize(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *SearchGoogleBooksParams) bindPageSize(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
@@ -188,7 +154,7 @@ func (o *GetAllBooksFromListParams) bindPageSize(rawData []string, hasKey bool, 
 	// Required: false
 	// AllowEmptyValue: false
 	if raw == "" { // empty values pass all other validations
-		// Default values have been previously initialized by NewGetAllBooksFromListParams()
+		// Default values have been previously initialized by NewSearchGoogleBooksParams()
 		return nil
 	}
 
@@ -206,7 +172,7 @@ func (o *GetAllBooksFromListParams) bindPageSize(rawData []string, hasKey bool, 
 }
 
 // validatePageSize carries on validations for parameter PageSize
-func (o *GetAllBooksFromListParams) validatePageSize(formats strfmt.Registry) error {
+func (o *SearchGoogleBooksParams) validatePageSize(formats strfmt.Registry) error {
 
 	// Required: false
 	if o.PageSize == nil {
@@ -216,6 +182,27 @@ func (o *GetAllBooksFromListParams) validatePageSize(formats strfmt.Registry) er
 	if err := validate.MaximumInt("pageSize", "query", *o.PageSize, 30, false); err != nil {
 		return err
 	}
+
+	return nil
+}
+
+// bindQuery binds and validates parameter Query from query.
+func (o *SearchGoogleBooksParams) bindQuery(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("query", "query", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// AllowEmptyValue: false
+	if err := validate.RequiredString("query", "query", raw); err != nil {
+		return err
+	}
+
+	o.Query = raw
 
 	return nil
 }
