# internal/types/lists/change_list_name_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package lists
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -18,51 +18,56 @@ import (
 	"test-project/internal/types"
 )
 
-// NewSaveBookToListParams creates a new SaveBookToListParams object
+// NewChangeListNameParams creates a new ChangeListNameParams object
 // no default values defined in spec.
-func NewSaveBookToListParams() SaveBookToListParams {
+func NewChangeListNameParams() ChangeListNameParams {
 
-	return SaveBookToListParams{}
+	return ChangeListNameParams{}
 }
 
-// SaveBookToListParams contains all the bound params for the save book to list operation
+// ChangeListNameParams contains all the bound params for the change list name operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters saveBookToList
-type SaveBookToListParams struct {
+// swagger:parameters changeListName
+type ChangeListNameParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*Book to add to the list.
-	  Required: true
-	  In: body
-	*/
-	BookToAddToList *types.BookInMyDb
-	/*List ID to to get the list to add books to.
+	/*ID from list to update
 	  Required: true
 	  In: path
 	*/
 	ListID strfmt.UUID `param:"list_id"`
+	/*updated List with a new name.
+	  Required: true
+	  In: body
+	*/
+	UpdatedList *types.ListRequest
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewSaveBookToListParams() beforehand.
-func (o *SaveBookToListParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewChangeListNameParams() beforehand.
+func (o *ChangeListNameParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
 
+	rListID, rhkListID, _ := route.Params.GetOK("list_id")
+	if err := o.bindListID(rListID, rhkListID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body types.BookInMyDb
+		var body types.ListRequest
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
-				res = append(res, errors.Required("bookToAddToList", "body", ""))
+				res = append(res, errors.Required("updatedList", "body", ""))
 			} else {
-				res = append(res, errors.NewParseError("bookToAddToList", "body", "", err))
+				res = append(res, errors.NewParseError("updatedList", "body", "", err))
 			}
 		} else {
 			// validate body object
@@ -71,33 +76,20 @@ func (o *SaveBookToListParams) BindRequest(r *http.Request, route *middleware.Ma
 			}
 
 			if len(res) == 0 {
-				o.BookToAddToList = &body
+				o.UpdatedList = &body
 			}
 		}
 	} else {
-		res = append(res, errors.Required("bookToAddToList", "body", ""))
+		res = append(res, errors.Required("updatedList", "body", ""))
 	}
-	rListID, rhkListID, _ := route.Params.GetOK("list_id")
-	if err := o.bindListID(rListID, rhkListID, route.Formats); err != nil {
-		res = append(res, err)
-	}
-
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (o *SaveBookToListParams) Validate(formats strfmt.Registry) error {
+func (o *ChangeListNameParams) Validate(formats strfmt.Registry) error {
 	var res []error
-
-	// bookToAddToList
-	// Required: true
-
-	// body is validated in endpoint
-	//if err := o.BookToAddToList.Validate(formats); err != nil {
-	//  res = append(res, err)
-	//}
 
 	// list_id
 	// Required: true
@@ -107,6 +99,14 @@ func (o *SaveBookToListParams) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	// updatedList
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.UpdatedList.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
@@ -114,7 +114,7 @@ func (o *SaveBookToListParams) Validate(formats strfmt.Registry) error {
 }
 
 // bindListID binds and validates parameter ListID from path.
-func (o *SaveBookToListParams) bindListID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *ChangeListNameParams) bindListID(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
@@ -138,7 +138,7 @@ func (o *SaveBookToListParams) bindListID(rawData []string, hasKey bool, formats
 }
 
 // validateListID carries on validations for parameter ListID
-func (o *SaveBookToListParams) validateListID(formats strfmt.Registry) error {
+func (o *ChangeListNameParams) validateListID(formats strfmt.Registry) error {
 
 	if err := validate.FormatOf("list_id", "path", "uuid", o.ListID.String(), formats); err != nil {
 		return err
