# internal/types/lists/create_list_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package lists
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -17,46 +17,46 @@ import (
 	"test-project/internal/types"
 )
 
-// NewCreateBookParams creates a new CreateBookParams object
+// NewCreateListParams creates a new CreateListParams object
 // no default values defined in spec.
-func NewCreateBookParams() CreateBookParams {
+func NewCreateListParams() CreateListParams {
 
-	return CreateBookParams{}
+	return CreateListParams{}
 }
 
-// CreateBookParams contains all the bound params for the create book operation
+// CreateListParams contains all the bound params for the create list operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters createBook
-type CreateBookParams struct {
+// swagger:parameters createList
+type CreateListParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*book to create
+	/*Creates a new book list with a name.
 	  Required: true
 	  In: body
 	*/
-	Body *types.BookInMyDb
+	NewList *types.ListRequest
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewCreateBookParams() beforehand.
-func (o *CreateBookParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewCreateListParams() beforehand.
+func (o *CreateListParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body types.BookInMyDb
+		var body types.ListRequest
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
-				res = append(res, errors.Required("body", "body", ""))
+				res = append(res, errors.Required("newList", "body", ""))
 			} else {
-				res = append(res, errors.NewParseError("body", "body", "", err))
+				res = append(res, errors.NewParseError("newList", "body", "", err))
 			}
 		} else {
 			// validate body object
@@ -65,11 +65,11 @@ func (o *CreateBookParams) BindRequest(r *http.Request, route *middleware.Matche
 			}
 
 			if len(res) == 0 {
-				o.Body = &body
+				o.NewList = &body
 			}
 		}
 	} else {
-		res = append(res, errors.Required("body", "body", ""))
+		res = append(res, errors.Required("newList", "body", ""))
 	}
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
@@ -77,14 +77,14 @@ func (o *CreateBookParams) BindRequest(r *http.Request, route *middleware.Matche
 	return nil
 }
 
-func (o *CreateBookParams) Validate(formats strfmt.Registry) error {
+func (o *CreateListParams) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	// body
+	// newList
 	// Required: true
 
 	// body is validated in endpoint
-	//if err := o.Body.Validate(formats); err != nil {
+	//if err := o.NewList.Validate(formats); err != nil {
 	//  res = append(res, err)
 	//}
 
